--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,33 @@
-* {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-}
+@import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@200&family=Libre+Baskerville&family=M+PLUS+1+Code:wght@100;300&family=Open+Sans:wght@300;400&family=Outfit:wght@200;300&family=Special+Elite&display=swap");
 
+* {
+  font-family: "Be Vietnam Pro", sans-serif;
+  font-family: "Libre Baskerville", serif;
+  font-family: "M PLUS 1 Code", sans-serif;
+  font-family: "Open Sans", sans-serif;
+  font-family: "Outfit", sans-serif;
+  font-family: "Special Elite", cursive;
+}
 h3 {
-  font-weight: 50;
+  font-weight: 40;
 }
 
 button {
   width: 80px;
   border-style: solid;
-  border-width: 2px;
+  border-width: 1px;
+  border-color: grey;
   margin: 10px;
 }
 
 .mainbody {
+  background: rgb(148, 233, 220);
+  background: radial-gradient(
+    circle,
+    rgba(148, 233, 220, 1) 0%,
+    rgba(134, 177, 145, 1) 100%
+  );
+
   display: flex;
   flex-direction: column;
   justify-items: center;
